--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,12 +6,13 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.2.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css">
+<link rel="stylesheet" href="/assets/css/style.css">
 <title>Eat more Burgers</title>
 </head>
 <body>
 
   <div class="jumbotron text-center">
-    <h2>Eat da Burgers</h2>
+    <h2>Eat da Burger</h2>
   </div>
   
   <div class="container">
