--- a/views/burgers.handlebars
+++ b/views/burgers.handlebars
@@ -3,10 +3,10 @@
     <h4>What burger do you want to eat?</h4>
     <form class="form-group">
       <input class="form-control my-4" type="text" id="add-burger">
-      <button class="btn btn-outline-warning" type="submit" id="submit-burger">Add
+      <button class="btn btn-warning" type="submit" id="submit-burger">Add
         burger</button>
     </form>
-    <button class="btn btn-outline-primary" type="submit" id="trust-chef">Trust the chef!</button>
+    {{!-- <button class="btn btn-success" type="submit" id="trust-chef">Trust the chef!</button> --}}
   </div>
   <div class="col-4 border-right">
     <h3 class="text-center">Burgers to eat</h3>
